# recorz

./: .gitignore  README.md  TODO.md  WORKSPACE_TODO.md  implementation.md  pyproject.toml
docs/: bluebook_vm_parity_execution_plan.md  bluebook_vm_parity_roadmap.md  code_example.md  deeper_self_hosting_execution_plan.md  deeper_self_hosting_stage0_stability_bundle.md  deeper_self_hosting_stage1_inventory.md  deeper_self_hosting_stage2_runtime_metadata_audit.md  deeper_self_hosting_stage3_manifest_boundary_note.md  deeper_self_hosting_stage4_closure_matrix.md  deeper_self_hosting_stage4_handoff_note.md  post_phase_1_execution_plan.md  post_phase_1_roadmap.md  post_phase_1_stage4_self_hosting_audit.md  post_phase_1_stage_5_default_priority_note.md  post_phase_1_stage_5_design_gates.md  post_phase_1_stage_5_readiness_audit.md  recorz_architecture_book.md  recorz_compiler_and_bootstrap_specification.md  recorz_concurrency_multiprocessing_and_capability_security_specification.md  recorz_ebnf.md  recorz_formal_specification.md  recorz_language_specification.md  recorz_potential_newspeak_direction.md  recorz_standard_library_and_core_class_specification.md  recorz_ui_primitive_contract.md  recorz_vm_and_object_memory_specification.md  smalltalk80_ui_extraction_plan.md  step01_hello.md  step02_interpreter.md  workspace_user_flow.md
examples/: qemu_riscv_append_method_demo.rz  qemu_riscv_bitblt_draw_line_demo.rz  qemu_riscv_browser_surface_demo.rz  qemu_riscv_browser_surface_live_bridge_demo.rz  qemu_riscv_character_scanner_renderer_demo.rz  qemu_riscv_cursor_be_cursor_demo.rz  (+155 more)
(+151 files in other folders)
